# OpenGLPlayground

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/INTERNAL/: App.h  Camera.h  ElementBuffer.h  Geometry.h  Light.h  Loader.h  Material.h  Renderer.h  Shader.h  ShaderUtility.h  Structures.h  Texture.h  TextureUtility.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/TESTS/: Test.h  Test3D.h  TestCamera.h  TestClearColor.h  TestLight.h  TestTexture.h  TestToPhong.h  TestTransforms.h  TestTriangle.h
lib/ASSIMP/lib/: libassimp.so.5.0.0
lib/glfw-3.3.4/lib/: libglfw.so.3.3
res/shaders/: basic3D.glsl  element.glsl  gouraud.frag.glsl  gouraud.vert.glsl  instancing.vert.glsl  light.glsl  phong.frag.glsl  phong.vert.glsl  phongLight.glsl  phongObject.glsl  texture.frag.glsl  texture.glsl  texture.vert.glsl  transform.glsl  triangle.glsl  triangles.frag.glsl  triangles.vert.glsl
source/: App.cpp  Geometry.cpp  Light.cpp  Loader.cpp  Material.cpp  ShaderUtility.cpp  Structures.cpp  TextureUtility.cpp
src/: App.cpp  App.cpp.old  Camera.cpp  ElementBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/tests/: Test.cpp  Test3D.cpp  TestCamera.cpp  TestClearColor.cpp  TestLight.cpp  TestTexture.cpp  TestToPhong.cpp  TestTransforms.cpp  TestTriangle.cpp
test/: Bubacow.cpp  ClearColor.cpp  DataToGPU.cpp  Fragment.cpp  FragmentInterpolation.cpp  Gouraud.cpp  Instancing.cpp  LightTest.cpp  MeshLoading.cpp  MultipleObjects.cpp  Orbit.cpp  ShadingAlgorithms.cpp  Texture.cpp  Triangle.cpp  WindowTest.cpp
